--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@
 *.png filter=lfs diff=lfs merge=lfs -text
 *.7z filter=lfs diff=lfs merge=lfs -text
 *.gbx filter=lfs diff=lfs merge=lfs -text
+*.webp filter=lfs diff=lfs merge=lfs -text
