--- a/trackmania/skins/CarSport/community/Orange_Fox/desc.yml
+++ b/trackmania/skins/CarSport/community/Orange_Fox/desc.yml
@@ -1,3 +1,3 @@
 name: Orange Fox
 description: Orange skin with "TMFurs" old branding and orange fox at the front
-author: Unknown
+author: Sheepersleep
