Update authors in "Winter 2022" campaign

--- a/trackmania/maps/Stadium/Winter2022_Campaign/pack.yml
+++ b/trackmania/maps/Stadium/Winter2022_Campaign/pack.yml
@@ -12,5 +12,5 @@ authors:
     - Kvikk
     - SimonLuck31
     - ieva
-    - TBA
+    - Ikewolf
 link: https://trackmania.exchange/mappack/view/1989
