--- a/trackmania/maps/Stadium/Winter2022_Campaign/pack.yml
+++ b/trackmania/maps/Stadium/Winter2022_Campaign/pack.yml
@@ -1,16 +1,17 @@
 name: TMFurs Winter2022 Campaign
 description: Third official "Trackmania Furs" campaign dedicated to Winter season
 authors:
+    - Arkes
     - Deska
-    - Viiru
     - Gyrule_
-    - RaceFox
-    - MarpleMarten
-    - Patryk1023
-    - Timmy
-    - RaviFennec
-    - Kvikk
-    - SimonLuck31
     - ieva
     - Ikewolf
+    - Kvikk
+    - MarpleMarten
+    - Patryk1023
+    - RaceFox
+    - RaviFennec
+    - SimonLuck31
+    - Timmy
+    - Viiru
 link: https://trackmania.exchange/mappack/view/1989
